// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`.not.toBeValidDate fails when given a valid date value 1`] = `
"<dim>expect(</intensity><red>received</color><dim>).not.toBeValidDate()</intensity>

Expected value to not be a valid date received:
  <red>2018-01-01T13:00:00.000Z</color>"
`;

exports[`.toBeValidDate fails when given an invalid date 1`] = `
"<dim>expect(</intensity><red>received</color><dim>).toBeValidDate()</intensity>

Expected value to be a valid date received:
  <red>Date { NaN }</color>"
`;

exports[`.toBeValidDate fails when not given non-date values 1`] = `
"<dim>expect(</intensity><red>received</color><dim>).toBeValidDate()</intensity>

Expected value to be a valid date received:
  <red>1</color>"
`;
